--- a/packages/browser-extension/src/styles/popup.css
+++ b/packages/browser-extension/src/styles/popup.css
@@ -15,6 +15,12 @@ body {
   width: 320px;
 }
 
+@media (max-width: 768px) {
+  body {
+    width: auto;
+  }
+}
+
 body * {
   box-sizing: border-box;
 }
@@ -71,6 +77,14 @@ header {
     & #report-button:hover:not(:disabled) > svg {
       color: var(--color-error);
     }
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    margin: 0 auto;
+    max-width: 320px;
+    width: 100%;
   }
 }
 
